# linux-gpib

./: ChangeLog  README.txt
linux-gpib-kernel/: .gitignore  ChangeLog  INSTALL  Makefile  README
linux-gpib-kernel/debian/: changelog  control  linux-gpib-kernel.dkms  rules
linux-gpib-user/: AUTHORS  ChangeLog  INSTALL  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh
linux-gpib-user/debian/: 98-gpib-generic.rules  README.Debian  README.source  changelog  control  copyright  gpib.conf  gpib_config  linux-gpib-user.install  python3-gpib.install  rules
linux-gpib-user/doc/: Makefile.am  Makefile.in  linux-gpib.sgml
linux-gpib-user/doc/doc_html/: configuration-gpib-conf.html  configuration-gpib-config.html  configuration.html  gfdl-1.html  gfdl-10.html  gfdl-2.html  gfdl-3.html  gfdl-4.html  gfdl-5.html  gfdl-6.html  gfdl-7.html  gfdl-8.html  gfdl-9.html  gfdl-addendum.html  gfdl.html  gpib-protocol.html  ibterm.html  index.html  reference-function-allspoll.html  reference-function-async-ibcnt.html  reference-function-async-iberr.html  reference-function-async-ibsta.html  reference-function-cfgn.html  reference-function-devclear.html  reference-function-devclearlist.html  reference-function-enablelocal.html  reference-function-enableremote.html  reference-function-findlstn.html  reference-function-findrqs.html  reference-function-get-pad.html  reference-function-get-sad.html  reference-function-ibask.html  reference-function-ibbna.html  reference-function-ibcac.html  reference-function-ibclr.html  reference-function-ibcmd.html  reference-function-ibcmda.html  reference-function-ibconfig.html  reference-function-ibdev.html  reference-function-ibeos.html  (+74 more)
linux-gpib-user/doc/man/man1/: ibterm.1
linux-gpib-user/doc/man/man3/: AllSPoll.3  AsyncIbcnt.3  AsyncIberr.3  AsyncIbsta.3  CFGn.3  DevClear.3  DevClearList.3  EnableLocal.3  EnableRemote.3  FindLstn.3  FindRQS.3  GetPAD.3  GetSAD.3  MLA.3  MSA.3  MTA.3  MakeAddr.3  PPE_byte.3  PPoll.3  PPollConfig.3  PPollUnconfig.3  PassControl.3  RcvRespMsg.3  ReadStatusByte.3  Receive.3  ReceiveSetup.3  ResetSys.3  Send.3  SendCmds.3  SendDataBytes.3  SendIFC.3  SendLLO.3  SendList.3  SendSetup.3  SetRWLS.3  TestSRQ.3  TestSys.3  ThreadIbcnt.3  ThreadIberr.3  ThreadIbsta.3  (+46 more)
linux-gpib-user/doc/man/man5/: gpib.conf.5
linux-gpib-user/doc/man/man8/: gpib_config.8
linux-gpib-user/drivers/: Makefile.in
linux-gpib-user/examples/: Makefile.in  ibterm.c  ibtest.c  master_read_to_file.c  master_write_from_file.c  (+2 more)
linux-gpib-user/include/gpib/: Makefile.am  Makefile.in  gpib_user.h  gpib_version.h  ib.h  version_subst
(+148 files in other folders)
